--- a/app/views/admin/all_users.html.erb
+++ b/app/views/admin/all_users.html.erb
@@ -6,57 +6,65 @@
         <thead>
           <tr>
             <th class="text-center" style="width: 10%">#</th>
-            <th style="width: 20%">Name</th>
-            <th style="width: 15%">Registered Date</th>
-            <th class="text-center" style="width: 15%">Current Loan</th>
-            <th style="width: 15%">Last Contributions</th>
-            <th class="text-center" style="width: 15%">Last Loan</th>
-            <th class="text-center" style="width: 10%"></th>
+            <th class="text-center">Name</th>
+            <th class="text-center">Registered Date</th>
+            <th class="text-center">Current Loan</th>
+            <th class="text-center">Last Contributions</th>
+            <th class="text-center">Last Loan</th>
+            <th class="text-center"></th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td class="text-center">1</td>
-            <td>Haruna Popoola</td>
-            <td>12-07-2017</td>
+            <td class="text-center">Gboyega Alowolodu</td>
+            <td class="text-center">12-07-2017</td>
             <td class="text-center">Savings</td>
             <td class="text-center">150,000</td>
             <td class="text-center">12-07-2017</td>
-            <td>
+            <td class="text-center">
               <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
+              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
+              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
+            </td>
+          </tr>
+          <tr>
+            <td class="text-center">2</td>
+            <td class="text-center">Gboyega Alowolodu</td>
+            <td class="text-center">12-07-2017</td>
+            <td class="text-center">Savings</td>
+            <td class="text-center">150,000</td>
+            <td class="text-center">12-07-2017</td>
+            <td class="text-center">
+              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
+              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
+              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
+            </td>
+          </tr>
+          <tr>
+            <td class="text-center">3</td>
+            <td class="text-center">Gboyega Alowolodu</td>
+            <td class="text-center">12-07-2017</td>
+            <td class="text-center">Savings</td>
+            <td class="text-center">150,000</td>
+            <td class="text-center">12-07-2017</td>
+            <td class="text-center">
+              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
+              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
+              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
             </td>
           </tr>
           <tr>
             <td class="text-center">1</td>
-            <td>Haruna Popoola</td>
-            <td>12-07-2017</td>
+            <td class="text-center">Gboyega Alowolodu</td>
+            <td class="text-center">12-07-2017</td>
             <td class="text-center">Savings</td>
             <td class="text-center">150,000</td>
             <td class="text-center">12-07-2017</td>
-            <td>
+            <td class="text-center">
               <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td>Haruna Popoola</td>
-            <td>12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
-            <td>
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-center">1</td>
-            <td>Haruna Popoola</td>
-            <td>12-07-2017</td>
-            <td class="text-center">Savings</td>
-            <td class="text-center">150,000</td>
-            <td class="text-center">12-07-2017</td>
-            <td>
-              <button type="button" class="btn btn-outline-info btn-round" data-toggle="tooltip" data-placement="top" title="View Details"><span class="fa fa-external-link-square"></span></button>
+              <button type="button" class="btn btn-outline-primary btn-round" data-toggle="tooltip" data-placement="top" title="Edit"><span class="fa fa-check"></span></button>
+              <button type="button" class="btn btn-outline-danger btn-round"data-toggle="tooltip" data-placement="top" title="Remove"><span class="fa fa-times"></span></button>
             </td>
           </tr>
         </tbody>
